# catalystwan

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ENDPOINTS.md  LICENSE  README.md  cisco_system_model.py  endpoint_registry.py  endpoints-md.py  endpoints.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  release.md  search.html  searchindex.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: documentation.yml  linting.yml  release.yml  unittests.yml  unittests_p310.yml  unittests_p311.yml  unittests_p38.yml  unittests_p39.yml  version.yml
_sources/: index.rst.txt
_sources/catalystwan/: catalystwan.rst.txt
_sources/vmngclient/: vmngclient.api.rst.txt
_static/: documentation_options.js
catalystwan/: __init__.py  abstractions.py  catalystwan.api.html  catalystwan.html  catalystwan.utils.html  dataclasses.py  exceptions.py  logging.conf  modules.html  response.py  session.py  typed_list.py  version.py  vmanage_auth.py
catalystwan/api/: admin_tech_api.py  administration.py  alarms_api.py  api_container.py  basic_api.py  config_device_inventory_api.py  config_group_api.py  dashboard_api.py  device_action_api.py  feature_profile_api.py  logs_api.py  (+16 more)
examples/: parcel_configuration_guide.py  policies_configuration_guide.py  policy_forwarding_qos.py
vmngclient/: Untitled-1.json  __init__.py  data_sequence.py  dataclasses.py  exceptions.py  logging.conf  modules.html  response.py  session.py  tmp_note_for_templatedefinition.md  typed_list.py  version.py  vmanage_auth.py  vmngclient.api.html  vmngclient.html  vmngclient.utils.html
(+904 files in other folders)
