[tool.poetry]
name = "vmngclient"
version = "0.2.1"
description = "Universal vManage API"
authors = ["kagorski <kagorski@cisco.com>"]
readme = "README.md"
repository = "https://github.com/CiscoDevNet/vManage-client"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
python-dateutil = "^2.8.2"
attrs = "^21.4.0"
aiohttp = "^3.8.1"
ciscoconfparse = "^1.6.40"
tenacity = "^8.1.0"
parameterized = "^0.8.1"
Jinja2 = "^3.1.2"
flake8-quotes = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
mypy = "0.991"
flake8 = "^5.0.4"
Sphinx = "^5.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
